--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -756,147 +756,123 @@
   --button-size-lg-marginBottom: var(--sizes-size-0);
   --button-size-lg-paddingRight: var(--sizes-size-9);
   --button-size-lg-paddingBottom: var(--sizes-size-6);
-  --transfer-base-top-border-color: var(--colors-neutral-line-8);
-  --transfer-base-top-border-style: var(--borders-style-2);
-  --transfer-base-top-border-width: var(--borders-width-2);
-  --transfer-base-left-border-color: var(--colors-neutral-line-8);
-  --transfer-base-left-border-style: var(--borders-style-2);
-  --transfer-base-left-border-width: var(--borders-width-2);
-  --transfer-base-right-border-color: var(--colors-neutral-line-8);
-  --transfer-base-right-border-style: var(--borders-style-2);
-  --transfer-base-right-border-width: var(--borders-width-2);
-  --transfer-base-bottom-border-color: var(--colors-neutral-line-8);
-  --transfer-base-bottom-border-style: var(--borders-style-2);
-  --transfer-base-bottom-border-width: var(--borders-width-2);
-  --transfer-base-top-left-border-radius: var(--borders-radius-3);
-  --transfer-base-top-right-border-radius: var(--borders-radius-3);
-  --transfer-base-bottom-left-border-radius: var(--borders-radius-2);
-  --transfer-base-bottom-right-border-radius: var(--borders-radius-2);
-  --transfer-base-shadow: var(--shadows-shadow-none);
   --transfer-base-title-bg: var(--colors-neutral-fill-10);
+  --transfer-base-title-color: var(--colors-neutral-text-2);
   --transfer-base-title-fontSize: var(--fonts-size-7);
-  --transfer-base-content-fontSize: var(--fonts-size-7);
-  --transfer-base-title-font-color: var(--colors-neutral-text-2);
   --transfer-base-title-fontWeight: var(--fonts-weight-6);
   --transfer-base-title-lineHeight: var(--fonts-lineHeight-2);
-  --transfer-base-content-font-color: var(--colors-neutral-text-2);
+  --transfer-base-content-color: var(--colors-neutral-text-2);
+  --transfer-base-content-fontSize: var(--fonts-size-7);
   --transfer-base-content-fontWeight: var(--fonts-weight-6);
   --transfer-base-content-lineHeight: var(--fonts-lineHeight-2);
-  --transfer-base-body-marginTop: var(--sizes-size-1);
-  --transfer-base-body-marginLeft: var(--sizes-size-1);
-  --transfer-base-body-paddingTop: var(--sizes-size-1);
-  --transfer-base-body-marginRight: var(--sizes-size-1);
-  --transfer-base-body-paddingLeft: var(--sizes-size-1);
-  --transfer-base-body-marginBottom: var(--sizes-size-1);
-  --transfer-base-body-paddingRight: var(--sizes-size-1);
-  --transfer-base-body-paddingBottom: var(--sizes-size-1);
-  --transfer-base-header-marginTop: var(--sizes-size-1);
-  --transfer-base-header-marginLeft: var(--sizes-size-1);
+  --transfer-base-top-border-color: var(--colors-neutral-line-8);
+  --transfer-base-top-border-width: var(--borders-width-2);
+  --transfer-base-top-border-style: var(--borders-style-2);
+  --transfer-base-right-border-color: var(--colors-neutral-line-8);
+  --transfer-base-right-border-width: var(--borders-width-2);
+  --transfer-base-right-border-style: var(--borders-style-2);
+  --transfer-base-bottom-border-color: var(--colors-neutral-line-8);
+  --transfer-base-bottom-border-width: var(--borders-width-2);
+  --transfer-base-bottom-border-style: var(--borders-style-2);
+  --transfer-base-left-border-color: var(--colors-neutral-line-8);
+  --transfer-base-left-border-width: var(--borders-width-2);
+  --transfer-base-left-border-style: var(--borders-style-2);
+  --transfer-base-top-right-border-radius: var(--borders-radius-3);
+  --transfer-base-top-left-border-radius: var(--borders-radius-3);
+  --transfer-base-bottom-right-border-radius: var(--borders-radius-2);
+  --transfer-base-bottom-left-border-radius: var(--borders-radius-2);
   --transfer-base-header-paddingTop: var(--sizes-size-5);
-  --transfer-base-header-marginRight: var(--sizes-size-1);
-  --transfer-base-header-paddingLeft: var(--sizes-size-8);
-  --transfer-base-header-marginBottom: var(--sizes-size-1);
-  --transfer-base-header-paddingRight: var(--sizes-size-8);
   --transfer-base-header-paddingBottom: var(--sizes-size-5);
-  --transfer-base-option-marginTop: var(--sizes-size-1);
-  --transfer-base-option-marginLeft: var(--sizes-size-1);
+  --transfer-base-header-paddingLeft: var(--sizes-size-8);
+  --transfer-base-header-paddingRight: var(--sizes-size-8);
+  --transfer-base-body-paddingTop: var(--sizes-size-0);
+  --transfer-base-body-paddingBottom: var(--sizes-size-0);
+  --transfer-base-body-paddingLeft: var(--sizes-size-0);
+  --transfer-base-body-paddingRight: var(--sizes-size-0);
   --transfer-base-option-paddingTop: var(--sizes-size-5);
-  --transfer-base-option-marginRight: var(--sizes-size-1);
-  --transfer-base-option-paddingLeft: var(--sizes-size-8);
-  --transfer-base-option-marginBottom: var(--sizes-size-1);
-  --transfer-base-option-paddingRight: var(--sizes-size-8);
   --transfer-base-option-paddingBottom: var(--sizes-size-5);
-  --transfer-tree-top-left-border-radius: var(--borders-radius-2);
-  --transfer-tree-top-right-border-radius: var(--borders-radius-2);
-  --transfer-tree-bottom-left-border-radius: var(--borders-radius-2);
-  --transfer-tree-bottom-right-border-radius: var(--borders-radius-2);
-  --transfer-tree-bg-hover-color: var(--colors-neutral-fill-10);
-  --transfer-tree-bg-active-color: var(--colors-brand-10);
-  --transfer-tree-marginTop: var(--sizes-size-1);
-  --transfer-tree-marginLeft: var(--sizes-size-1);
-  --transfer-tree-paddingTop: var(--sizes-size-3);
-  --transfer-tree-marginRight: var(--sizes-size-1);
-  --transfer-tree-paddingLeft: var(--sizes-size-7);
-  --transfer-tree-marginBottom: var(--sizes-size-2);
-  --transfer-tree-paddingRight: var(--sizes-size-7);
-  --transfer-tree-paddingBottom: var(--sizes-size-3);
-  --transfer-tree-option-marginTop: var(--sizes-size-1);
-  --transfer-tree-option-marginLeft: var(--sizes-size-1);
-  --transfer-tree-option-paddingTop: var(--sizes-size-1);
-  --transfer-tree-option-marginRight: var(--sizes-size-1);
-  --transfer-tree-option-paddingLeft: var(--sizes-size-6);
-  --transfer-tree-option-marginBottom: var(--sizes-size-4);
-  --transfer-tree-option-paddingRight: var(--sizes-size-1);
-  --transfer-tree-option-paddingBottom: var(--sizes-size-1);
-  --transfer-group-fontSize: var(--fonts-size-7);
-  --transfer-group-font-color: var(--colors-neutral-text-5);
-  --transfer-group-fontWeight: var(--fonts-weight-6);
-  --transfer-group-lineHeight: var(--fonts-lineHeight-2);
-  --transfer-table-last-paddingRight: var(--sizes-base-9);
-  --transfer-table-header-marginTop: var(--sizes-size-1);
-  --transfer-table-header-marginLeft: var(--sizes-size-1);
-  --transfer-table-header-paddingTop: var(--sizes-size-5);
-  --transfer-table-header-marginRight: var(--sizes-size-1);
-  --transfer-table-header-paddingLeft: var(--sizes-size-7);
-  --transfer-table-header-marginBottom: var(--sizes-size-1);
-  --transfer-table-header-paddingRight: var(--sizes-size-7);
-  --transfer-table-header-paddingBottom: var(--sizes-size-5);
-  --transfer-table-option-marginTop: var(--sizes-size-1);
-  --transfer-table-option-marginLeft: var(--sizes-size-1);
-  --transfer-table-option-paddingTop: var(--sizes-size-4);
-  --transfer-table-option-marginRight: var(--sizes-size-1);
-  --transfer-table-option-paddingLeft: var(--sizes-size-7);
-  --transfer-table-option-marginBottom: var(--sizes-size-2);
-  --transfer-table-option-paddingRight: var(--sizes-size-7);
-  --transfer-table-option-paddingBottom: var(--sizes-size-5);
-  --transfer-search-top-border-color: var(--colors-neutral-line-8);
-  --transfer-search-top-border-style: var(--borders-style-2);
-  --transfer-search-top-border-width: var(--borders-width-2);
-  --transfer-search-left-border-color: var(--colors-neutral-line-8);
-  --transfer-search-left-border-style: var(--borders-style-2);
-  --transfer-search-left-border-width: var(--borders-width-2);
-  --transfer-search-right-border-color: var(--colors-neutral-line-8);
-  --transfer-search-right-border-style: var(--borders-style-2);
-  --transfer-search-right-border-width: var(--borders-width-2);
-  --transfer-search-bottom-border-color: var(--colors-neutral-line-8);
-  --transfer-search-bottom-border-style: var(--borders-style-2);
-  --transfer-search-bottom-border-width: var(--borders-width-2);
-  --transfer-search-top-left-border-radius: var(--borders-radius-3);
-  --transfer-search-top-right-border-radius: var(--borders-radius-3);
-  --transfer-search-bottom-left-border-radius: var(--borders-radius-3);
-  --transfer-search-bottom-right-border-radius: var(--borders-radius-3);
-  --transfer-search-shadow: var(--shadows-shadow-none);
+  --transfer-base-option-paddingLeft: var(--sizes-size-8);
+  --transfer-base-option-paddingRight: var(--sizes-size-8);
+  --transfer-base-option-marginTop: var(--sizes-size-0);
+  --transfer-base-option-marginBottom: var(--sizes-size-0);
+  --transfer-base-option-marginLeft: var(--sizes-size-0);
+  --transfer-base-option-marginRight: var(--sizes-size-0);
+  --transfer-base-shadow: var(--shadows-shadow-none);
+  --transfer-search-color: var(--colors-neutral-text-2);
   --transfer-search-fontSize: var(--fonts-size-7);
-  --transfer-search-font-color: var(--colors-neutral-text-2);
   --transfer-search-fontWeight: var(--fonts-weight-6);
   --transfer-search-lineHeight: var(--fonts-lineHeight-2);
-  --transfer-search-border-hover-color: var(--colors-brand-4);
-  --transfer-search-marginTop: var(--sizes-size-1);
-  --transfer-search-marginLeft: var(--sizes-size-1);
-  --transfer-search-paddingTop: var(--sizes-size-6);
-  --transfer-search-marginRight: var(--sizes-size-1);
-  --transfer-search-paddingLeft: var(--sizes-size-6);
-  --transfer-search-marginBottom: var(--sizes-size-1);
-  --transfer-search-paddingRight: var(--sizes-size-6);
-  --transfer-search-paddingBottom: var(--sizes-size-6);
-  --transfer-search-border-active-color: var(--colors-brand-4);
   --transfer-search-placeholder-font-color: var(--colors-neutral-text-6);
-  --transfer-search-input-marginTop: var(--sizes-size-1);
-  --transfer-search-input-marginLeft: var(--sizes-size-1);
+  --transfer-search-top-border-color: var(--colors-neutral-line-8);
+  --transfer-search-top-border-width: var(--borders-width-2);
+  --transfer-search-top-border-style: var(--borders-style-2);
+  --transfer-search-right-border-color: var(--colors-neutral-line-8);
+  --transfer-search-right-border-width: var(--borders-width-2);
+  --transfer-search-right-border-style: var(--borders-style-2);
+  --transfer-search-bottom-border-color: var(--colors-neutral-line-8);
+  --transfer-search-bottom-border-width: var(--borders-width-2);
+  --transfer-search-bottom-border-style: var(--borders-style-2);
+  --transfer-search-left-border-color: var(--colors-neutral-line-8);
+  --transfer-search-left-border-width: var(--borders-width-2);
+  --transfer-search-left-border-style: var(--borders-style-2);
+  --transfer-search-top-right-border-radius: var(--borders-radius-3);
+  --transfer-search-top-left-border-radius: var(--borders-radius-3);
+  --transfer-search-bottom-right-border-radius: var(--borders-radius-3);
+  --transfer-search-bottom-left-border-radius: var(--borders-radius-3);
+  --transfer-search-border-hover-color: var(--colors-brand-4);
+  --transfer-search-border-active-color: var(--colors-brand-4);
+  --transfer-search-paddingTop: var(--sizes-size-6);
+  --transfer-search-paddingBottom: var(--sizes-size-6);
+  --transfer-search-paddingLeft: var(--sizes-size-6);
+  --transfer-search-paddingRight: var(--sizes-size-6);
   --transfer-search-input-paddingTop: var(--sizes-size-4);
-  --transfer-search-input-marginRight: var(--sizes-size-1);
-  --transfer-search-input-paddingLeft: var(--sizes-size-7);
-  --transfer-search-input-marginBottom: var(--sizes-size-1);
-  --transfer-search-input-paddingRight: var(--sizes-size-7);
   --transfer-search-input-paddingBottom: var(--sizes-size-4);
-  --transfer-chained-marginTop: var(--sizes-size-1);
-  --transfer-chained-marginLeft: var(--sizes-size-1);
+  --transfer-search-input-paddingLeft: var(--sizes-size-7);
+  --transfer-search-input-paddingRight: var(--sizes-size-7);
+  --transfer-search-shadow: var(--shadows-shadow-none);
+  --transfer-group-color: var(--colors-neutral-text-5);
+  --transfer-group-fontSize: var(--fonts-size-7);
+  --transfer-group-fontWeight: var(--fonts-weight-6);
+  --transfer-group-lineHeight: var(--fonts-lineHeight-2);
+  --transfer-table-header-paddingTop: var(--sizes-size-5);
+  --transfer-table-header-paddingBottom: var(--sizes-size-5);
+  --transfer-table-header-paddingLeft: var(--sizes-size-7);
+  --transfer-table-header-paddingRight: var(--sizes-size-7);
+  --transfer-table-option-paddingTop: var(--sizes-size-4);
+  --transfer-table-option-paddingBottom: var(--sizes-size-5);
+  --transfer-table-option-paddingLeft: var(--sizes-size-7);
+  --transfer-table-option-paddingRight: var(--sizes-size-7);
+  --transfer-table-last-paddingRight: var(--sizes-base-9);
+  --transfer-tree-bg-hover-color: var(--colors-neutral-fill-10);
+  --transfer-tree-bg-active-color: var(--colors-brand-10);
+  --transfer-tree-top-right-border-radius: var(--borders-radius-2);
+  --transfer-tree-top-left-border-radius: var(--borders-radius-2);
+  --transfer-tree-bottom-right-border-radius: var(--borders-radius-2);
+  --transfer-tree-bottom-left-border-radius: var(--borders-radius-2);
+  --transfer-tree-paddingTop: var(--sizes-size-3);
+  --transfer-tree-paddingBottom: var(--sizes-size-3);
+  --transfer-tree-paddingLeft: var(--sizes-size-7);
+  --transfer-tree-paddingRight: var(--sizes-size-7);
+  --transfer-tree-marginTop: var(--sizes-size-0);
+  --transfer-tree-marginBottom: var(--sizes-size-2);
+  --transfer-tree-marginLeft: var(--sizes-size-0);
+  --transfer-tree-marginRight: var(--sizes-size-0);
+  --transfer-tree-option-paddingTop: var(--sizes-size-0);
+  --transfer-tree-option-paddingBottom: var(--sizes-size-0);
+  --transfer-tree-option-paddingLeft: var(--sizes-size-6);
+  --transfer-tree-option-paddingRight: var(--sizes-size-0);
+  --transfer-tree-option-marginTop: var(--sizes-size-0);
+  --transfer-tree-option-marginBottom: var(--sizes-size-4);
+  --transfer-tree-option-marginLeft: var(--sizes-size-0);
+  --transfer-tree-option-marginRight: var(--sizes-size-0);
   --transfer-chained-paddingTop: var(--sizes-size-5);
-  --transfer-chained-marginRight: var(--sizes-size-1);
-  --transfer-chained-paddingLeft: var(--sizes-size-6);
-  --transfer-chained-marginBottom: var(--sizes-size-1);
-  --transfer-chained-paddingRight: var(--sizes-size-6);
   --transfer-chained-paddingBottom: var(--sizes-size-5);
+  --transfer-chained-paddingLeft: var(--sizes-size-6);
+  --transfer-chained-paddingRight: var(--sizes-size-6);
+  --transfer-chained-marginTop: var(--sizes-size-0);
+  --transfer-chained-marginBottom: var(--sizes-size-0);
+  --transfer-chained-marginLeft: var(--sizes-size-0);
+  --transfer-chained-marginRight: var(--sizes-size-0);
   --input-default-default-top-border-color: var(--colors-neutral-line-8);
   --input-default-default-top-border-width: var(--borders-width-2);
   --input-default-default-top-border-style: var(--borders-style-2);
