--- a/packages/amis-ui/scss/components/form/_tag.scss
+++ b/packages/amis-ui/scss/components/form/_tag.scss
@@ -67,14 +67,41 @@
 
       @include button-variant(
         var(--TagControl-sugBtn-bg),
-        var(--TagControl-sugBtn-border),
         var(--TagControl-sugBtn-color),
+        var(--TagControl-sugBtn-border),
+        var(--TagControl-sugBtn-border),
+        var(--TagControl-sugBtn-border),
+        var(--TagControl-sugBtn-border),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        solid,
+        solid,
+        solid,
+        solid,
+        none,
         var(--TagControl-sugBtn-onHover-bg),
-        var(--TagControl-sugBtn-onHover-border),
         var(--TagControl-sugBtn-onHover-color),
+        var(--TagControl-sugBtn-onHover-border),
+        var(--TagControl-sugBtn-onHover-border),
+        var(--TagControl-sugBtn-onHover-border),
+        var(--TagControl-sugBtn-onHover-border),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        var(--TagControl-sugBtn-borderWidth),
+        solid,
+        solid,
+        solid,
+        solid,
+        none,
         var(--TagControl-sugBtn-onActive-bg),
+        var(--TagControl-sugBtn-onActive-color),
         var(--TagControl-sugBtn-onActive-border),
-        var(--TagControl-sugBtn-onActive-color)
+        var(--TagControl-sugBtn-onActive-border),
+        var(--TagControl-sugBtn-onActive-border),
+        var(--TagControl-sugBtn-onActive-border)
       );
 
       &.is-disabled {
@@ -94,5 +121,22 @@
   &.#{$ns}PopOver--leftTopLeftBottom > .#{$ns}ListMenu {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+  }
+
+  .#{$ns}ListMenu-item {
+    height: var(--inputTag-option-height);
+    color: var(--inputTag-option-color);
+    font-size: var(--inputTag-option-fontSize);
+    line-height: var(--inputTag-option-lineHeight);
+    font-weight: var(--inputTag-option-fontWeight);
+    padding: var(--inputTag-option-paddingTop)
+      var(--inputTag-option-paddingRight) var(--inputTag-option-paddingBottom)
+      var(--inputTag-option-paddingLeft);
+    background: var(--inputTag-option-bg-color);
+
+    &:hover {
+      color: var(--inputTag-option-hover-color);
+      background: var(--inputTag-option-hover-bg-color);
+    }
   }
 }
