--- a/packages/amis-ui/scss/components/form/_combo.scss
+++ b/packages/amis-ui/scss/components/form/_combo.scss
@@ -32,15 +32,15 @@
       var(--Combo-addBtn-fontSize),
       var(--Combo-addBtn-fontWeight),
       var(--Combo-addBtn-lineHeight),
-      var(--Combo-addBtn-borderRadius),
-      var(--Combo-addBtn-borderRadius),
-      var(--Combo-addBtn-borderRadius),
-      var(--Combo-addBtn-borderRadius),
+      var(--combo-multi-addBtn-top-left-border-radius),
+      var(--combo-multi-addBtn-top-right-border-radius),
+      var(--combo-multi-addBtn-bottom-right-border-radius),
+      var(--combo-multi-addBtn-bottom-left-border-radius),
       var(--Combo-addBtn-height),
-      var(--Combo-addBtn-paddingY),
-      var(--Combo-addBtn-paddingY),
-      var(--Combo-addBtn-paddingX),
-      var(--Combo-addBtn-paddingX)
+      var(--combo-multi-addBtn-paddingTop),
+      var(--combo-multi-addBtn-paddingBottom),
+      var(--combo-multi-addBtn-paddingLeft),
+      var(--combo-multi-addBtn-paddingRight)
     );
 
     @include button-variant(
@@ -98,16 +98,16 @@
   }
 
   &-delBtn {
-    color: var(--icon-color);
+    color: var(--combo-multi-delBtn-color);
     cursor: pointer;
 
     &:hover {
-      color: var(--icon-onHover-color);
+      color: var(--combo-multi-delBtn-hover-color);
     }
   }
 
   &-tab-delBtn {
-    color: var(--icon-color);
+    color: var(--combo-multi-delBtn-color);
     cursor: pointer;
     margin-left: var(--gap-sm);
     display: inline-block;
@@ -118,7 +118,7 @@
     }
 
     &:hover {
-      color: var(--icon-onHover-color);
+      color: var(--combo-multi-delBtn-hover-color);
     }
   }
 
@@ -137,7 +137,7 @@
   }
 
   &-item {
-    background: var(--Page-main-bg);
+    background: var(--combo-bg-color);
   }
 
   &-itemDrager {
@@ -239,10 +239,13 @@
     // 不严格点会命中 combo 里面嵌套 combo 的情况，so sad.
     > .#{$ns}Combo-item,
     > .#{$ns}Combo-items > .#{$ns}Combo-item {
-      border: var(--Combo--vertical-item-borderWidth) dashed
-        var(--Combo--vertical-item-borderColor);
-      padding: var(--Combo--vertical-item-paddingY)
-        var(--Combo--vertical-item-paddingX);
+      border-color: var(--Combo--vertical-item-borderColor);
+      border-width: var(--Combo--vertical-item-borderWidth);
+      border-style: var(--Combo--vertical-item-borderStyle);
+      border-radius: var(--Combo--vertical-item-borderRadius);
+      padding: var(--combo-vertical-paddingTop)
+        var(--combo-vertical-paddingRight) var(--combo-vertical-paddingBottom)
+        var(--combo-vertical-paddingLeft);
       position: relative;
     }
 
@@ -260,7 +263,14 @@
     &:not(.is-disabled) > .#{$ns}Combo-item:hover,
     &:not(.is-disabled) > .#{$ns}Combo-items > .#{$ns}Combo-item:hover {
       border-color: var(--Combo--vertical-item-onHover-borderColor);
-      // border-style: solid;
+      border-width: var(--combo-vertical-hover-top-border-width)
+        var(--combo-vertical-hover-right-border-width)
+        var(--combo-vertical-hover-bottom-border-width)
+        var(--combo-vertical-hover-left-border-width);
+      border-style: var(--combo-vertical-hover-top-border-style)
+        var(--combo-vertical-hover-right-border-style)
+        var(--combo-vertical-hover-bottom-border-style)
+        var(--combo-vertical-hover-left-border-style);
 
       > .#{$ns}Combo-delBtn,
       > .#{$ns}Combo-delController {
