--- a/packages/amis-ui/scss/components/_table2.scss
+++ b/packages/amis-ui/scss/components/_table2.scss
@@ -692,7 +692,8 @@
   .#{$ns}TableCell-sortBtn {
     cursor: pointer;
     width: var(--TableCell-sortBtn-width);
-    height: var(--gap-md);
+    height: 100%;
+    vertical-align: middle;
     position: static;
     display: inline-block;
     transform: none;
@@ -703,9 +704,9 @@
       color: var(--icon-onHover-color);
     }
 
-    &--up > svg,
-    &--down > svg,
-    &--default > svg {
+    &--up svg,
+    &--down svg,
+    &--default svg {
       color: inherit;
       width: 13px;
       height: 13px;
@@ -744,7 +745,7 @@
     color: var(--table-icon-color);
     margin-left: var(--TableCell-icon-gap);
 
-    svg.icon {
+    svg {
       width: 12px;
       height: 12px;
     }
@@ -770,13 +771,15 @@
   .#{$ns}TableCell-filterBtn {
     cursor: pointer;
     width: var(--TableCell-filterBtn-width);
+    height: 100%;
+    vertical-align: middle;
     position: static;
     display: inline-block;
     transform: none;
     color: var(--table-icon-color);
     margin-left: var(--TableCell-icon-gap);
 
-    svg.icon {
+    svg {
       width: 13px;
       height: 13px;
     }
@@ -906,6 +909,26 @@
     position: absolute;
     top: 0;
     left: 0;
+  }
+
+  .table-sort-default {
+    content: var(--table-sort-icon);
+  }
+
+  .table-sort-up {
+    content: var(--table-sort-up-icon);
+  }
+
+  .table-sort-down {
+    content: var(--table-sort-down-icon);
+  }
+
+  .table-filter-icon {
+    content: var(--table-filter-icon);
+  }
+
+  .table-search-icon {
+    content: var(--table-search-icon);
   }
 }
 
