--- a/packages/amis-editor-core/scss/style-control/_theme-dom-tree.scss
+++ b/packages/amis-editor-core/scss/style-control/_theme-dom-tree.scss
@@ -5,7 +5,7 @@
   background: #fff;
   border: 1px solid #e8e9eb;
   height: 400px;
-  min-width: 280px;
+  min-width: 200px;
 
   &-header {
     display: flex;
@@ -33,6 +33,10 @@
   &-content {
     padding: var(--gap-base);
     overflow-y: auto;
+
+    .cxd-Tree-itemText {
+      font-size: 12px;
+    }
   }
 
   &-style-wrapper {
